<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionarEmergActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10sp"
        android:paddingBottom="10dp"
        android:text="@string/str_gestionemergencias"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#3F51B5"
        android:layout_marginTop="25dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_titulo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txttitulo"
        android:hint="@string/str_gestionemergencias"
        android:inputType="text"
        />

    <!-- Campo para la fecha -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_fecha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtfecha"
        android:hint="@string/str_fecha"
        android:inputType="date" />

    <!-- Campo para la descripción -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_descripcion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtdescripcion"
        android:hint="@string/str_descripcion"
        android:inputType="textMultiLine"
        android:lines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        >


    <!-- Botón para guardar, borrar y actualizar -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ges_btnGuardar"
        android:text="@string/str_btnguardar"
        android:layout_gravity="center_horizontal"
        android:onClick="guardar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ges_btnactualizar"
        android:text="@string/str_btnactualizar"
        android:onClick="actualizar"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ges_btnborrar"
        android:text="@string/str_btnborrar"
        android:onClick="borrar"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>
        />
</LinearLayout>


</LinearLayout>