<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="46dp"

        />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRegistrar"
        android:text="@string/str_btnregistrar"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnbuscar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnbuscar"
        android:onClick="onClickBuscar"
        android:layout_marginTop="8dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlistar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnListar"
        android:onClick="onClickListar"
        android:layout_marginTop="8dp"
        />


</LinearLayout>